# astralparty-korean-patch

./: .flake8  .gitignore  README.md  pyproject.toml
.github/actions/notify-discord-release/: action.yml
.github/workflows/: data-sync.yml  patch-build.yml
output_get/CN_BILIBILI/3.1.0/019/: report.json
output_get/INT_ANDROID/3.1.0/019/: report.json
output_get/INT_STEAM/3.1.0/019/: report.json
src/astral_patch/: __init__.py  config.py  paths.py
src/astral_patch/cli/: app.py  assets_get.py  assets_lang.py  assets_patch.py  assets_str.py
src/astral_patch/common/: snapshot.py  validate.py
src/astral_patch/patch/: __init__.py  rule_loader.py
src/astral_patch/patch/rules/: cn_bilibili.json  int_android.json  int_steam.json
src/astral_patch/workflow/: _common.py  app.py  build_patch_zips.py  build_release_meta.py  build_sync_commit_message.py  delete_run_artifacts.py  extract_shard_report.py  merge_get_reports.py  merge_get_snapshots.py  plan_get_shards.py  prune_output_get.py  update_workflow_readme.py  validate_workflow_layout.py
state/: get_check.json  lang_report.json  last_str_sync_report.json  str_report.json
