[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "astral-party-korean-patch"
version = "0.1.0"
description = "Automation and patch tooling for Astral Party Korean patch releases."
requires-python = ">=3.12"
dependencies = [
    "httpx[http2]>=0.27,<1.0",
    "Pillow>=10.0.0",
    "UnityPy>=1.11.0",
    "psycopg[binary]>=3.1.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
astral-patch = "astral_patch.cli.app:main"
astral-workflow = "astral_patch.workflow.app:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"astral_patch.patch.rules" = ["*.json"]

[tool.setuptools.packages.find]
where = ["src"]
